# RevHive

./: .codeguardian.yml  .dockerignore  .env.example  .gitignore  .revhive.yml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_zh.md  pyproject.toml  requirements-server.txt  requirements.txt
.github/workflows/: ci.yml  code-review.yml
docs/: CNAME  REVIEW-FIX-VERIFY.md  index.html
examples/: sample_review.py
server/: config_server.py
src/codeguardian/: __init__.py  config.py  demo.py  main.py
src/codeguardian/agents/: __init__.py  base.py  conversation_reviewer.py  coordinator.py  doc_agent.py  fix_agent.py  logic_agent.py  performance_agent.py  refactor_agent.py  repo_agent.py  security_agent.py  style_agent.py  test_agent.py
src/codeguardian/analysis/: __init__.py  trend.py
src/codeguardian/graph/: workflow.py
src/codeguardian/models/: schemas.py
src/codeguardian/team/: batch_processor.py
src/codeguardian/utils/: __init__.py  dedup.py  llm_client.py  parser.py
src/revhive/: __init__.py  config.py  demo.py  main.py
src/revhive/agents/: __init__.py  base.py  conversation_reviewer.py  coordinator.py  doc_agent.py  fix_agent.py  logic_agent.py  performance_agent.py  refactor_agent.py  repo_agent.py  security_agent.py  style_agent.py  test_agent.py
src/revhive/analysis/: __init__.py  trend.py
src/revhive/graph/: workflow.py
src/revhive/models/: schemas.py
src/revhive/team/: __init__.py  batch_processor.py
src/revhive/utils/: __init__.py  dedup.py  llm_client.py  parser.py
tests/: test_agents.py  test_config.py  test_dedup.py  test_demo.py  test_integration.py  test_llm_client.py  test_parser.py  test_schemas.py  test_workflow.py
