[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codeguardian"
version = "0.3.0"
description = "Multi-Agent collaborative code review and security scanning system powered by MiMo"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "CodeGuardian Team"}
]
keywords = ["code-review", "multi-agent", "langgraph", "ai", "security", "mimo", "xiaomi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
]

dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "openai>=1.30.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
    "pyjwt>=2.10.0",
    "cryptography>=44.0.0",
]
anthropic = [
    "langchain-anthropic>=0.1.0",
]
tree-sitter = [
    "tree-sitter>=0.22.0",
    "tree-sitter-python>=0.23.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.0",
]
all = [
    "codeguardian[server,anthropic,tree-sitter,dev]",
]

[project.scripts]
codeguardian = "codeguardian.main:cli"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["codeguardian*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.bandit]
exclude_dirs = ["tests"]
