[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "revhive-ai"
version = "0.3.8"
description = "AI code review tool with 10 parallel agents. Security scanning, performance analysis, and logic review. Supports MiMo, OpenAI, DeepSeek, Qwen, GLM, Kimi, Anthropic."
readme = "README.md"
license = {text = "BSL-1.1"}
requires-python = ">=3.10"
authors = [
    {name = "RevHive Team"}
]
keywords = ["code-review", "multi-agent", "langgraph", "ai", "security", "mimo", "xiaomi", "code-quality", "static-analysis", "linting", "code-scanning", "devsecops", "sast", "pull-request", "ci-cd"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
]

dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "openai>=1.30.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
anthropic = [
    "langchain-anthropic>=0.1.0",
]
tree-sitter = [
    "tree-sitter>=0.22.0",
    "tree-sitter-python>=0.23.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.0",
]
all = [
    "revhive-ai[anthropic,tree-sitter,dev]",
]

[project.urls]
Homepage = "https://github.com/Jansen003/RevHive"
Documentation = "https://jansen003.github.io/RevHive"
Repository = "https://github.com/Jansen003/RevHive"
Issues = "https://github.com/Jansen003/RevHive/issues"

[project.scripts]
revhive = "revhive.main:cli"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["revhive*"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::langchain_core._api.deprecation.LangChainPendingDeprecationWarning",
]

[tool.ruff]
line-length = 120
target-version = "py310"
